Updates to UI that show file progress, improved pause/resume buttons, etc.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -133,28 +133,38 @@
                 </li>
               </ul>
             </div>
-            <div id="handwheel" class="widget" style="text-align: center;">
+            <div id="handwheel" class="widget fabmo-manual-control" style="text-align: center;">
               <canvas width="220" height="220" id="wheel"></canvas>
             </div>
+            <ul class="off-canvas-list fabmo-status fabmo-file-control">
+                <li style="margin: 10px" class="file-info" style="align: center;">
+                  <div class="filename" style="text-align: center;"></div>
+                </li>
+                <li style="margin: 10px" class="file-info" style="align: center;">
+                <div class="progress-container">
+                  <div class="progress" style=""></div>
+                </div>
+                </li>
+            </ul>
 
             <!-- ************ File Control Widget ************ -->
             <div id="job-info" class="widget">
-              <ul class="off-canvas-list fabmo-file-control fabmo-status">
-                <li>
-                  <div class="row">
-                    <div class="small-4 columns control">
-                      <span class="fabmo-pause-button hide"><a class="small button warning ">P</a></span>
-                    </div>
-                    <div class="small-4 columns control">
-                      <span class="fabmo-resume-button hide"><a class="small button success ">R</a></span>
-                    </div>
-                    <div class="small-4 columns control">
-                      <span class="fabmo-stop-button hide"><a class="small button alert ">S</a></span>
-                    </div>
-                  </div>
+              <ul class="off-canvas-list fabmo-status fabmo-file-control">
+                <li style="margin: 10px">
+                      <span class="fabmo-pause-button hide">
+                        <a class="med button warning radius" style="border: 2px solid black;">Pause</a>
+                      </span>
                 </li>
-                <li class="hide file-info"><label><span class="filename"></span></label></li>
-                <li class="hide file-info progress secondary"><span class="meter progress" style="width:0%"></span></li>  
+                <li style="margin: 10px">
+                      <span class="fabmo-resume-button hide">
+                        <a class="med button success radius" style="border: 2px solid black;">Resume</a>
+                      </span>
+                </li>
+                <li style="margin: 10px">
+                      <span class="fabmo-stop-button hide">
+                        <a class="med button alert radius" style="border: 2px solid black;">Quit</a>
+                      </span>
+                </li>
               </ul>
             </div>
 
