--- a/dashboard/apps/previewer/index.html
+++ b/dashboard/apps/previewer/index.html
@@ -66,7 +66,7 @@
         var w = window.innerWidth;
         var h = window.innerHeight - $("#topbar").height()// - 10; // Fudge factor for foundation weirdness
         $('#preview').size(w,h);
-        viewer.renderer.setSize(w,h);
+        viewer.resize(w,h);
       }
 
       $(window).resize(function(){
