Cleanup stylesheet.  Improvae appearance on mobile.  Switch to navbar at top.

--- a/dashboard/apps/network_manager/index.html
+++ b/dashboard/apps/network_manager/index.html
@@ -10,15 +10,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<header class="grey"> <!-- Class can be "blue", "red", "grey", "orange" -->
-		<section>
-			<div class="app-title-container">
-				<h2>Network Manager</h2>
-			</div>
-		</section>
-	</header>
-
-	<section class="container">
+        <section class="top-bar-section">
+        <nav class="top-bar" data-topbar role="navigation">
+          <ul class="title-area">
+            <li class="name">
+              <h1><a id="app-header" href="">Network</a></h1>
+            </li>
+            <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
+          </ul>
+          <section class="top-bar-section">
+          </section>
+        </nav>
+        </section>
+	
+        <section class="container">
 		<div class="row title">
 			<div class="small-9 medium-10 large-10 columns">
 				<h4>Wifi Networks</h4>
