Add support for unit display in the dashboard

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -83,7 +83,7 @@
                   <form>
                     <div class="row axis">
                         <div class="small-9 columns">
-                          <label style="border-top: 1px solid #eee;">X<span class="in">in</span><span class="posx pos"></span><input type"number" step="0.001" class="posx pos" style="display:none;" value=""></label>
+                          <label style="border-top: 1px solid #eee;">X<span class="units">&nbsp;</span><span class="posx pos"></span><input type"number" step="0.001" class="posx pos" style="display:none;" value=""></label>
                           <button type="submit" class="newPos-submit" id="newPos-x" style="display:none;">zMove</button>
                         </div>
                         <div class="small-3 columns home"><span class="button-zerox noselect">X<label>0</label></span></div>
@@ -92,7 +92,7 @@
                   <form>
                     <div class="row axis">
                       <div class="small-9 columns">
-                        <label>Y<span class="in">in</span><span class="posy pos"></span><input type"number" step="0.001" class="posy pos" style="display:none;" value=""></label>
+                        <label>Y<span class="units">&nbsp;</span><span class="posy pos"></span><input type"number" step="0.001" class="posy pos" style="display:none;" value=""></label>
                         <button type="submit" class="newPos-submit" id="newPos-y" style="display:none;">zMove</button>
                       </div>
                       <div class="small-3 columns home"><span class="button-zeroy noselect">Y<label>0</label></span></div>
@@ -101,7 +101,7 @@
                   <form>
                     <div class="row axis">
                       <div class="small-9 columns">
-                        <label>Z<span class="in">in</span><span class="posz pos"></span><input type"number" step="0.001" class="posx pos" style="display:none;" value=""></label>
+                        <label>Z<span class="units">&nbsp;</span><span class="posz pos"></span><input type"number" step="0.001" class="posx pos" style="display:none;" value=""></label>
                         <button type="submit" class="newPos-submit" id="newPos-z" style="display:none;">zMove</button>
                       </div>
                       <div class="small-3 columns home"><span class="button-zeroz noselect">Z<label>0</label></span></div>
