Fix bug in config logging.  Close #163

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -423,6 +423,7 @@
 		} else {
 			if(jobid != current_job_id) {
 				current_job_id = jobid;
+				refresh_jobs_list();
 				loadFile('');
 				$('#nav-active').hide();				
 			}
