--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1081,7 +1081,7 @@
   <script>
     var flattenObject = function(ob) {
     var toReturn = {};
-  
+  console.log("ob = " + ob);
       for (var i in ob) {
         if (!ob.hasOwnProperty(i)) continue;
     
