--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -134,6 +134,7 @@
               </ul>
             </div>
             <div id="handwheel" class="widget fabmo-manual-control" style="text-align: center;">
+              <span id="speedwheelLabel">Speed Adjustment</span>
               <canvas width="220" height="220" id="wheel"></canvas>
             </div>
             <ul class="off-canvas-list fabmo-status fabmo-file-control">
