x y and z cordinates in nav now in a single row.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -32,18 +32,10 @@
 
             <!-- ***** Tool Position Section ***** -->
             <section class="right show-for-small-up fabmo-status" id="right-position-container">
-            <div style="display: table;">
-              <div style="display: table-row;">
-                <div style="display: table-cell;"><label>X : <span class="posx">X.XXX</span></label></div>
-                <div style="display: table-cell; width: 2em;"></div>
-                <div style="display: table-cell;"><label>Z : <span class="posz">Z.ZZZ</span></label></div>
-              </div>
-              <div style="display: table-row;">
-                <div style="display: table-cell;"><label>Y : <span class="posy">Y.YYY</span></label></div>
-                <div style="display: table-cell;"></div>
-                <div style="display: table-cell;"></div>
-
-              </div>
+            <div style="display: table-row;">
+                <div style="display: table-cell; padding-right: 1.2em; padding-top: 0.7em;"><label>X : <span class="posx">X.XXX</span></label></div>
+                <div style="display: table-cell; padding-right: 1.2em; padding-top: 0.7em;"><label>Y : <span class="posy">Y.YYY</span></label></div>
+                <div style="display: table-cell; padding-right: 1.2em; padding-top: 0.7em;"><label>Z : <span class="posz">Z.ZZZ</span></label></div> 
             </div>
             </section>
 
