--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1081,7 +1081,6 @@
   <script>
     var flattenObject = function(ob) {
     var toReturn = {};
-  console.log("ob = " + ob);
       for (var i in ob) {
         if (!ob.hasOwnProperty(i)) continue;
     
@@ -1104,28 +1103,15 @@
           if(err) {
             console.error(err);
           } else {
-            for(key in data.driver) {
-              value = data.driver[key];
-              input = $('#driver_' + key);
-              if(input.length) {
-                input.val(String(value));
-              }
-            }
-            for(key in data.engine) {
-              value = data.engine[key];
-              input = $('#engine_' + key);
-              if(input.length) {
-                input.val(String(value));
-              } 
-            }
-            var flat = flattenObject(data.opensbp);
-            for(key in flat) {
-              value = flat[key];
-              input = $('#opensbp_' + key);
-              if(input.length) {
-                input.val(String(value));
-              }
-            }
+            ['driver', 'engine', 'opensbp', 'machine'].forEach(function(branch) {
+                for(key in data[branch]) {
+                  v = data[branch][key];
+                  input = $('#' + branch + '_' + key);
+                  if(input.length) {
+                    input.val(String(v));
+                  }
+                }
+            });
           }
         });
     }
