--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -987,7 +987,7 @@
                 </select>
               </label>
             </div>
-        </div>
+          </div>
           <div class="large-4 columns">
             <div class="row collapse">
               <label>Power Level</label>
@@ -998,8 +998,7 @@
                 <span class="postfix">(0-1.0)</span>
               </div>
             </div>
-        </div>
-
+          </div>
         </fieldset>
       </div>
 
@@ -1027,7 +1026,7 @@
                 <span class="postfix">microsteps</span>
               </div>
             </div>
-        </div>
+          </div>
           <div class="large-4 columns">
             <div class="row collapse">
               <label>Step Angle</label>
@@ -1038,7 +1037,7 @@
                 <span class="postfix">degrees</span>
               </div>
             </div>
-        </div>
+          </div>
           <div class="large-4 columns">
             <div class="row collapse">
               <label>Power Management Mode
@@ -1050,8 +1049,7 @@
                 </select>
               </label>
             </div>
-        </div>
-
+          </div>
           <div class="large-4 columns">
             <div class="row collapse">
               <label>Power Level</label>
@@ -1062,11 +1060,195 @@
                 <span class="postfix">(0-1.0)</span>
               </div>
             </div>
-        </div>
-
-
+          </div>
         </fieldset>
       </div>
+
+      <div class="row">
+        <fieldset>
+          <legend>Channel 4</legend>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Travel/Revolution</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_4tr" class="driver_input"/>
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">in/rev</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Microstep Resolution</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_4mi" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">microsteps</span>
+              </div>
+            </div>
+        </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Step Angle</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_4sa" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">degrees</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Management Mode
+                <select id="driver_4pm" class="driver_input">
+                  <option value="0">Disabled</option>
+                  <option value="1">Always on</option>
+                  <option value="2">On only when in cycle</option>
+                  <option value="3">On only when moving</option>
+                </select>
+              </label>
+            </div>
+          </div>
+            <div class="large-4 columns">
+              <div class="row collapse">
+                <label>Power Level</label>
+                <div class="small-9 columns">
+                  <input type="text" id="driver_4pl" class="driver_input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix">(0-1.0)</span>
+                </div>
+              </div>
+         </div>
+        </fieldset>
+     </div>
+
+      <div class="row">
+        <fieldset>
+          <legend>Channel 5</legend>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Travel/Revolution</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_5tr" class="driver_input"/>
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">in/rev</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Microstep Resolution</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_5mi" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">microsteps</span>
+              </div>
+            </div>
+        </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Step Angle</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_5sa" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">degrees</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Management Mode
+                <select id="driver_5pm" class="driver_input">
+                  <option value="0">Disabled</option>
+                  <option value="1">Always on</option>
+                  <option value="2">On only when in cycle</option>
+                  <option value="3">On only when moving</option>
+                </select>
+              </label>
+            </div>
+          </div>
+            <div class="large-4 columns">
+              <div class="row collapse">
+                <label>Power Level</label>
+                <div class="small-9 columns">
+                  <input type="text" id="driver_5pl" class="driver_input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix">(0-1.0)</span>
+                </div>
+              </div>
+         </div>
+        </fieldset>
+     </div>
+
+      <div class="row">
+        <fieldset>
+          <legend>Channel 6</legend>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Travel/Revolution</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_6tr" class="driver_input"/>
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">in/rev</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Microstep Resolution</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_6mi" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">microsteps</span>
+              </div>
+            </div>
+        </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Step Angle</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_6sa" class="driver_input" />
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">degrees</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Power Management Mode
+                <select id="driver_6pm" class="driver_input">
+                  <option value="0">Disabled</option>
+                  <option value="1">Always on</option>
+                  <option value="2">On only when in cycle</option>
+                  <option value="3">On only when moving</option>
+                </select>
+              </label>
+            </div>
+          </div>
+            <div class="large-4 columns">
+              <div class="row collapse">
+                <label>Power Level</label>
+                <div class="small-9 columns">
+                  <input type="text" id="driver_6pl" class="driver_input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix">(0-1.0)</span>
+                </div>
+              </div>
+         </div>
+        </fieldset>
+     </div>
 
   </section>
 
