Change "quit" to "stop"

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -164,7 +164,7 @@
                 </li>
                 <li style="margin: 10px">
                       <span class="fabmo-stop-button hide">
-                        <a class="med button alert radius" style="border: 2px solid black;">Quit</a>
+                        <a class="med button alert radius" style="border: 2px solid black;">Stop</a>
                       </span>
                 </li>
               </ul>
